2004-09-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/changing-defaults.itely (Defining new
	contexts): Fixed misprinted context name.

2004-09-13  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/regression/rehearsal-mark-number.ly: Reuse the existing
	formatting routine when adding boxed numbers. Makes it easier to
	extrapolate how to do for boxed letters.

2004-09-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lily-guile.cc (ly_symbol2string): bugfix for CVS guile. 

2004-08-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.2.6 released

	* lily/metronome-engraver.cc (stop_translation_timestep): call
	typeset_grob().

2004-08-20  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond.py (ly_paper_to_latexpaper): Only set the
	height of head and foot if textheight is not set, otherwise let
	the geometry package make evenly sized head and foot.

2004-08-18  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/clef-engraver.cc: Add forceClef to list of read properties.

2004-07-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/changing-defaults.itely (Horizontal spacing): 
	Correct the documentation of the spacing parameters. 

2004-07-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.2.5

	* lily/lyric-engraver.cc: mention LyricText

2004-07-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/translation-functions.scm (format-metronome-markup): backport.

	* scm/define-markup-commands.scm (general-align): add  function.

2004-07-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/axis-group-engraver.cc (process_acknowledged_grobs):
	backport.

2004-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: Remove pre-2.1 changes.

	* Documentation/misc/ChangeLog-2.1: New file.

2004-07-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/test/chords-below-volta-bracket.ly,
	input/test/no-key-at-end-of-line.ly: New example files (FAQs)

2004-07-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>
