@@ -35,7 +35,8 @@ default_header = r"""
 """
 
 
-wiki_base = 'http://afavant.elte.hu/lywiki/'
+wiki_base = ''
+# 'http://afavant.elte.hu/lywiki/'
 
 
 default_footer = r"""<hr>Please take me <a href=@INDEX@>back to the index</a>
@@ -48,9 +49,6 @@ built = r"""
  <tr>
           <td align=left>
 
-<a href="%(wiki_base)s%(wiki_page)s">Read </a> comments on this page, or
-<a href="%(wiki_base)s%(wiki_page)s?action=edit">add</a> one.
-<p>
 <font size="-1">
 This page is for %(package_name)s-%(package_version)s (%(branch_str)s). <br>
 </font>
